SERVER-65188: Check shard response ok in SessionsCollectionConfigServer